<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gregorio.buildingblocks.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_developer_page"
        android:name="com.gregorio.buildingblocks.DeveloperActivity"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_developer" />

    <activity
        android:id="@+id/nav_edit_profile"
        android:name="com.gregorio.buildingblocks.GetStartedActivity"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_getstarted" />
</navigation>