<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/gradient_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".GetStartedActivity">

    <LinearLayout
        android:id="@+id/linLayoutVertical"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/wave"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="77dp"
            android:layout_height="72dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back_button"
            android:padding="10dp"
            app:srcCompat="@drawable/btnback"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/imvProfilePic"
            android:layout_width="162dp"
            android:layout_height="274dp"
            android:layout_gravity="center"
            android:layout_marginStart="124dp"
            android:layout_marginTop="-40dp"
            android:layout_marginEnd="124dp"
            android:layout_marginBottom="401dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/getstarted" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLayoutVertical">

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="#403B3B"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnUpload"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/upload_image"
            android:textColor="#5C5757"
            app:cornerRadius="15dp"
            app:rippleColor="#000000" />

        <EditText
            android:id="@+id/edtName"
            style="@style/editTextStyle"
            android:drawableLeft="@drawable/ic_baseline_name"

            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/editTextStyle"
            android:drawableLeft="@drawable/ic_baseline_email"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="#5C5757" />

        <Button
            android:id="@+id/btnStart"
            style="@style/buttonStyle"
            android:layout_margin="20dp"
            android:backgroundTint="#FF5A5A"
            android:text="@string/start"
            app:cornerRadius="15dp"
            app:rippleColor="#000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>